--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,7 +118,7 @@ body {
 }
 
 /* =============== TEXT FILTER =============== */
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -136,7 +136,7 @@ strong,
 em,
 small {
   filter: drop-shadow(0 0 0.3rem var(--bg-primary)) drop-shadow(0 0 0.3rem var(--bg-primary));
-}
+} */
 
 
 /* =============== SCROLLBAR =============== */
@@ -214,7 +214,7 @@ body::-webkit-scrollbar-thumb:hover {
   right: 0;
   width: 0;
   height: 0.25rem;
-  background: linear-gradient(to right, var(--primary), var(--secondary));
+  background: var(--text-primary);
   transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
 }
 
@@ -243,7 +243,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .theme-toggle:hover {
-  color: var(--primary);
+  color: var(--text-primary);
 }
 
 .theme-toggle svg {
