--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --primary-hover: #b91c1c;
   --secondary: #ec4899;
   --secondary-hover: #db2777;
+  --accent-primary: #525252;
 
   --bg-primary: #fcfcfc;
   --bg-secondary: #f5f5f5;
